<package>
  <name>road_recognition_msgs</name>
  <version>1.0.2</version>
  <description>
    ROS messages for robots using Ackermann steering.
  </description>
  <maintainer email="yudong.zhang@foxmail.com">Jack O'Quin</maintainer>
  <author>Zhang Yudong</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
